--- a/apps/website/src/pages/docs/components/data-display/property/usage.mdx
+++ b/apps/website/src/pages/docs/components/data-display/property/usage.mdx
@@ -69,13 +69,13 @@ export default function PropertyLabelWidth() {
 
 ```jsx
 import { Property, PropertyLabel, PropertyValue } from '@saas-ui/react'
-import { EmailIcon } from '@chakra-ui/icons'
+import { FiMail } from 'react-icons/fi'
 
 export default function PropertyWithIcon() {
   return (
     <Property>
       <PropertyLabel width="24px">
-        <EmailIcon display="block" />
+        <FiMail />
       </PropertyLabel>
       <PropertyValue>hello@saas-ui.dev</PropertyValue>
     </Property>
