--- a/apps/website/src/pages/docs/components/forms/search-input/usage.mdx
+++ b/apps/website/src/pages/docs/components/forms/search-input/usage.mdx
@@ -36,15 +36,11 @@ The `SearchInput` composes the `Input` component with a search icon and reset bu
 You can pass custom icons to the `icon` and `resetIcon` props.
 
 ```jsx
-import { SearchIcon, CloseIcon } from '@chakra-ui/icons'
+import { FiSearch, FiX } from 'react-icons/fi'
 
 export default function Search() {
   return (
-    <SearchInput
-      placeholder="Search"
-      icon={<SearchIcon />}
-      resetIcon={<CloseIcon />}
-    />
+    <SearchInput placeholder="Search" icon={<FiSearch />} resetIcon={<FiX />} />
   )
 }
 ```
