chore: add adding pages docs

--- a/apps/website/src/pages/docs/nextjs-starter-kit/development/updating-dependencies.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/development/updating-dependencies.mdx
@@ -6,7 +6,7 @@ description: How to keep your app up to date.
 It's important to keep your dependencies up to date. This helps to ensure that your
 application is secure and that you are using the latest features and best practices.
 
-## Manual update
+## Manual updates
 
 The best way to manually update dependencies is to use the `yarn upgrade-interactive` command. This will
 show you a list of dependencies that can be updated.
@@ -20,7 +20,7 @@ This allows you to select which dependencies you want to update.
 Be aware that not only major version changes can have breaking changes.
 Always make sure to test your application after updating dependencies.
 
-## Automated update
+## Automated updates
 
 You can use Github's Dependabot to automatically create pull requests to update your dependencies.
 
