--- a/apps/website/src/pages/docs/nextjs-starter-kit/installation/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/installation/index.mdx
@@ -4,13 +4,7 @@ description: Getting started quickly with the Next.js starter kit.
 ---
 
 After [redeeming](/redeem) your license key you will receive an invitation to
-the private Github repository and get access to the NPM registry.
-
-The Saas UI Pro repository contains source code for all components and examples, as well as the Next.js starter kit.
-Get started quickly by cloning the repository and running the demo application.
-
-The Saas UI Pro packages are also available through our private NPM registry. This allows you to install them
-in existing projects and also makes it easier to keep everything up to date.
+the private Github members team and get access to the NPM registry.
 
 <SimpleGrid columns={[1, null, 2]} spacing={8} mt="8">
   <QuickLink
