--- a/apps/website/src/pages/docs/nextjs-starter-kit/project-structure.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/project-structure.mdx
@@ -3,7 +3,7 @@ title: Project structure
 description: How to find your way in the project.
 ---
 
-Saas UI Pro is setup as a monorepo which is managed by Yarn v4 and Turbo Repo.
+The starter kit is setup as a monorepo which is managed by Yarn 4 and Turbo Repo.
 
 ## Folder structure
 
@@ -11,7 +11,6 @@ The folder structure looks as following:
 
 | Path                       | Package name         | Description                                                                          |
 | -------------------------- | -------------------- | ------------------------------------------------------------------------------------ |
-| `saas-ui`                  | @saas-ui-pro/\*      | Saas UI Pro packages and components.                                                 |
 | `apps/web`                 | web                  | Next.js (app router) frontend app.                                                   |
 | `apps/web/features/common` |                      | The app's common functionality, for example layouts, that is shared across features. |
 | `apps/web/features/*`      |                      | Domain specific code is grouped within individual features.                          |
