chore: fix sitemap

--- a/apps/website/src/pages/blog/building-a-multi-tenant-b2b-saas-with-vite-tanstack-router.mdx
+++ b/apps/website/src/pages/blog/building-a-multi-tenant-b2b-saas-with-vite-tanstack-router.mdx
@@ -1,8 +1,8 @@
 ---
 author: 'Eelco Wiersma'
 avatar: /eelco128.jpg
-title: 'Building a multi-tenant B2B SaaS with Vite and Tanstack Router & Query - Part 1: The boilerplate'
-description: "In this article, we'll start building a multi-tenant B2B SaaS using Vite, Tanstack Router & Query, Chakra UI and Saas UI."
+title: 'Building a multi-tenant B2B SaaS with Vite, Tanstack React Router and Query - Part 1: The boilerplate'
+description: "In this article, we'll start building a multi-tenant B2B SaaS using Vite, Tanstack React Router, React Query, Chakra UI and Saas UI."
 date: '2024-02-23'
 tags:
   ['vite', 'tanstack router', 'react query', 'react', 'saas ui', 'chakra ui']
