--- a/apps/website/src/pages/docs/nextjs-starter-kit/authentication/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/authentication/index.mdx
@@ -8,21 +8,24 @@ It ships with Next Auth (Auth.js) as the default authentication provider.
 
 <SimpleGrid columns={[1, null, 3]} spacing={8} mt="8">
   <QuickLink
-    href="/docs/pro/authentication/authjs"
+    href="/docs/nextjs-starter-kit/authentication/authjs"
     title="Auth.js"
     description="Configure Auth.js (NextAuth)."
     label="Read more"
   />
   <QuickLink
-    href="/docs/pro/authentication/supabase"
+    href="/docs/nextjs-starter-kit/authentication/supabase"
     title="Supabase"
     description="Configure Supabase auth."
     label="Read more"
   />
+</SimpleGrid>
+
+<SimpleGrid columns={[1, null, 3]} spacing={8} mt="8">
   <QuickLink
-    href="/docs/pro/authentication/clerk"
-    title="Clerk"
-    description="Configure Clerk auth."
+    href="/docs/nextjs-starter-kit/authentication/customize-auth-screens"
+    title="Customize auth screens"
+    description="Change functionality and styles of the auth screens."
     label="Read more"
   />
 </SimpleGrid>
