chore: update navigation

--- a/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
+++ b/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
@@ -20,7 +20,7 @@ to improve my `createPage` helper.
 
 ## How it works
 
-Here's an example how the new `createPage` helper is used in the [Saas UI Pro starterkit](https://saas-ui.dev/nextjs-boilerplate).
+Here's an example how the new `createPage` helper is used in the [Saas UI Pro starterkit](https://saas-ui.dev/nextjs-starter-kit).
 
 ```tsx
 import { notFound } from 'next/navigation'
