chore: update vercel docs

--- a/apps/website/src/pages/docs/nextjs-starter-kit/deployments/vercel.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/deployments/vercel.mdx
@@ -13,7 +13,7 @@ Follow these steps to deploy the monorepo to Vercel.
 6. Override the build command with;
 
 ```bash
-build build:web
+turbo run build
 ```
 
 7. Output directory
