--- a/apps/website/src/pages/docs/guides/auth/magic.mdx
+++ b/apps/website/src/pages/docs/guides/auth/magic.mdx
@@ -11,6 +11,8 @@ description: Integrating Magic authentication with Saas UI.
   npm={{ package: '@saas-ui/auth' }}
 />
 
+<Info>We no longer maintain this package.</Info>
+
 This integration allows you to connect Magic with the Saas UI auth screens and provider.
 
 Supported authentication strategies are:
