feat: update auth docs

--- a/apps/website/src/pages/docs/nextjs-starter-kit/authentication/authjs.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/authentication/authjs.mdx
@@ -3,12 +3,14 @@ title: Auth.js (NextAuth) authentication
 description: Using Auth.js (NextAuth) as your authentication service.
 ---
 
-NextAuth is a popular authentication solution for Next.js applications.
+<Info>
+  This authentication provider is deprecated and we recommend using the [Better
+  auth](/docs/nextjs-starterkit/authentication/better-auth) provider instead.
+</Info>
+
+Next Auth is an authentication solution for Next.js applications.
 It supports many different authentication providers and is easy to
 configure.
-
-NextAuth v5 is the default authentication provider for the Next.js starter kit
-and is configured with the Resend email provider out of the box.
 
 ## Configure
 
