--- a/apps/website/src/pages/docs/tanstack-router-starter-kit/index.mdx
+++ b/apps/website/src/pages/docs/tanstack-router-starter-kit/index.mdx
@@ -1,12 +1,15 @@
 ---
-title: Next.js SaaS starter kit
-description: A premium Next.js starter kit for SaaS and B2B projects with a focus on design, accessibility, and development speed.
+title: TanStack Router (SPA) starter kit
+description: A premium TanStack Router starter kit for SaaS and B2B projects with a focus on design, accessibility, and development speed.
 ---
 
 ## Introduction
 
-The Saas UI Next.js starter kit is a premium starter kit that is designed to help you build beautiful, intuitive web applications with speed.
+The TanStack Router starter kit is a premium starter kit that is designed to help you build beautiful, intuitive web applications with speed.
 It includes a comprehensive component library, a full-featured design system, and a set of best practices for building SaaS and B2B projects.
+
+This starter kit is a classic single page application (SPA), but with modern tooling.
+It's built with Vite and TanStack Router, and is a great choice if you don't want to deal with the complexity of RSC and want the best possible (dev) performance.
 
 ## Features
 
