--- a/apps/website/src/pages/docs/tanstack-router-starter-kit/installation/run-application.mdx
+++ b/apps/website/src/pages/docs/tanstack-router-starter-kit/installation/run-application.mdx
@@ -29,13 +29,13 @@ Then run the following command to start the local database and run database migr
 docker-compose up && yarn db:migrate
 ```
 
-To run the Next.js application, run the following command:
+To run the Vite application, run the following command:
 
 ```bash
 yarn dev:web
 ```
 
-This will start the Next.js application at `http://localhost:3000`.
+This will start the Vite application at `http://localhost:3000`.
 
 ## Authentication
 
@@ -56,5 +56,5 @@ You can now log in with your email address, the confirmation URL will be printed
 
 ## Next steps
 
-- [Configure Environment Variables](/docs/nextjs-starter-kit/configuration/environment-variables)
-- [Configure email provider](/docs/nextjs-starter-kit/configuration/email-provider)
+- [Configure Environment Variables](/docs/tanstack-router-starter-kit/configuration/environment-variables)
+- [Configure email provider](/docs/tanstack-router-starter-kit/configuration/email-provider)
