--- a/apps/website/src/pages/docs/tanstack-router-starter-kit/tech-stack.mdx
+++ b/apps/website/src/pages/docs/tanstack-router-starter-kit/tech-stack.mdx
@@ -1,14 +1,14 @@
 ---
 title: Tech stack
-description: An overview of technologies used in the Saas UI Next.js starter kit.
+description: An overview of technologies used in the TanStack Router starter kit.
 ---
 
-The Saas UI Next.js starter kit is built in a monorepo managed by [Yarn](https://yarnpkg.com) and [Turborepo](https://turbo.build/repo).
+The TanStack Router starter kit is built in a monorepo managed by [Yarn](https://yarnpkg.com) and [Turborepo](https://turbo.build/repo).
 
 ## Frameworks
 
-- **Next.js**: Using [App Router](https://nextjs.org/docs/app) and [Turbo pack](https://turbo.build/pack).
-- **Postgres**: Managed by [Drizzle](https://orm.drizzle.team), supports self-hosted Postgres or managed services like [Supabase](https://supabase.com) or [Neon](https://neon.tech).
+- **Vite**: Blazing fast build tool.
+- **TanStack Router**: TypeSafe router.
 - **Chakra UI**: UI library for building accessible and responsive web applications.
 - **tRPC**: A powerful and flexible API layer built on top of [tRPC](https://trpc.io).
 - **Zod**: TypeScript-first schema declaration and validation library.
