--- a/apps/website/src/pages/docs/tanstack-router-starter-kit/authentication/index.mdx
+++ b/apps/website/src/pages/docs/tanstack-router-starter-kit/authentication/index.mdx
@@ -3,18 +3,18 @@ title: Authentication
 description: How to configure authentication.
 ---
 
-The Next.js starterkit supports multiple authentication providers. You can choose the one that best fits your needs.
+The TanStack Router starter kit supports multiple authentication providers. You can choose the one that best fits your needs.
 It ships with Better Auth as the default authentication provider.
 
 <SimpleGrid columns={[1, null, 3]} spacing={8} mt="8">
   <QuickLink
-    href="/docs/nextjs-starter-kit/authentication/better-auth"
+    href="/docs/tanstack-router-starter-kit/authentication/better-auth"
     title="Better Auth"
     description="Configure Better Auth."
     label="Read more"
   />
   <QuickLink
-    href="/docs/nextjs-starter-kit/authentication/supabase"
+    href="/docs/tanstack-router-starter-kit/authentication/supabase"
     title="Supabase"
     description="Configure Supabase auth."
     label="Read more"
@@ -23,7 +23,7 @@ It ships with Better Auth as the default authentication provider.
 
 <SimpleGrid columns={[1, null, 3]} spacing={8} mt="8">
   <QuickLink
-    href="/docs/nextjs-starter-kit/authentication/customize-auth-screens"
+    href="/docs/tanstack-router-starter-kit/authentication/customize-auth-screens"
     title="Customize auth screens"
     description="Change functionality and styles of the auth screens."
     label="Read more"
