--- a/apps/website/content/docs/getting-started/frameworks/storybook.mdx
+++ b/apps/website/content/docs/getting-started/frameworks/storybook.mdx
@@ -12,7 +12,7 @@ description: A guide for using Saas UI with Storybook
 Install the required dependencies for Saas UI and Storybook.
 
 ```bash
-npm i @storybook/addon-themes @saas-ui/react@alpha @chakra-ui/react @emotion/react
+npm i @storybook/addon-themes @saas-ui/react@next @chakra-ui/react @emotion/react
 ```
 
 ### Setup Preview
