--- a/apps/website/content/docs/getting-started/installation.mdx
+++ b/apps/website/content/docs/getting-started/installation.mdx
@@ -41,7 +41,7 @@ To manually set up Saas UI in your project, follow the steps below.
 ### Install `@chakra-ui/react`
 
 ```bash
-npm i @saas-ui/react@alpha @chakra-ui/react @emotion/react
+npm i @saas-ui/react@next @chakra-ui/react @emotion/react
 ```
 
 ### Setup provider
