--- a/apps/website/content/docs/getting-started/frameworks/next-pages.mdx
+++ b/apps/website/content/docs/getting-started/frameworks/next-pages.mdx
@@ -33,7 +33,7 @@ configured correctly to use Saas UI.
 ### Install dependencies
 
 ```bash
-npm i @saas-ui/react@alpha @chakra-ui/react @emotion/react
+npm i @saas-ui/react@next @chakra-ui/react @emotion/react
 ```
 
 ### Setup provider
