--- a/apps/website/content/docs/getting-started/frameworks/remix.mdx
+++ b/apps/website/content/docs/getting-started/frameworks/remix.mdx
@@ -24,7 +24,7 @@ Use the remix template below to get started quickly.
 ### Install dependencies
 
 ```bash
-npm i @saas-ui/react@alpha @chakra-ui/react @emotion/react
+npm i @saas-ui/react@next @chakra-ui/react @emotion/react
 ```
 
 ### Setup emotion cache
