--- a/apps/website/content/docs/getting-started/frameworks/vite.mdx
+++ b/apps/website/content/docs/getting-started/frameworks/vite.mdx
@@ -26,7 +26,7 @@ Use the vite template below to get started quickly.
 ### Install dependencies
 
 ```bash
-npm i @saas-ui/react@alpha @chakra-ui/react @emotion/react
+npm i @saas-ui/react@next @chakra-ui/react @emotion/react
 ```
 
 ### Setup provider
