--- a/apps/website/src/pages/blog/building-a-multi-tenant-b2b-saas-with-vite-tanstack-router.mdx
+++ b/apps/website/src/pages/blog/building-a-multi-tenant-b2b-saas-with-vite-tanstack-router.mdx
@@ -10,6 +10,12 @@ tags:
 
 ## Introduction
 
+<Info>
+  This article was first written a year ago, and has been updated for the latest
+  versions of the libraries, including Chakra UI v3 and Saas UI v3 (beta). The
+  follow up articles are coming soon finally (I promise!).
+</Info>
+
 React Server Components (RSC) are the new craze, but what if I told you SPA's (Single-page-app) are here to stay, especially for B2B applications.
 
 This article is the first in a series where we'll build a multi-tenant B2B SaaS. We'll go over the basics of setting up Vite with Tanstack Router and a basic UI with authentication and building an API with Supabase.
@@ -35,7 +41,7 @@ We'll also install the dependencies for Tanstack Router.
 
 ```bash
 cd my-saas
-npm i @tanstack/react-router @tanstack/router-devtools @tanstack/router-vite-plugin
+npm i @tanstack/react-router @tanstack/react-router-devtools @tanstack/router-vite-plugin
 ```
 
 ## Configure the Vite plugin
@@ -61,7 +67,7 @@ Now that we have the router plugin set up, we can start creating our routes. Cre
 
 ```typescript
 import { createRootRoute, Link, Outlet } from '@tanstack/react-router'
-import { TanStackRouterDevtools } from '@tanstack/router-devtools'
+import { TanStackRouterDevtools } from '@tanstack/react-router-devtools'
 
 export const Route = createRootRoute({
   component: () => (
@@ -146,14 +152,14 @@ Great, we now have a basic setup for the router. Run the dev server with `npm ru
 To make our application look great, we'll use Chakra UI with the Saas UI design system. First, we'll install the dependencies.
 
 ```bash
-npm i @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion
+npm i @saas-ui/react@next @chakra-ui/react @emotion/react
 ```
 
 Then we need to add the `SaasProvider` to the `context/provider.tsx` file.
 
 ```typescript
 import { forwardRef } from "react";
-import { SaasProvider } from "@saas-ui/react";
+import { SuiProvider, defaultSystem } from "@saas-ui/react";
 import {
   Link,
   LinkProps,
@@ -185,7 +191,7 @@ const LinkComponent = forwardRef<HTMLAnchorElement, Pick<LinkProps, "href">>(
 
 export const Provider = () => {
   return (
-    <SaasProvider linkComponent={LinkComponent}>
+    <SaasProvider linkComponent={LinkComponent} value={defaultSystem}>
       <RouterProvider router={router} />
     </SaasProvider>
   );
@@ -238,7 +244,7 @@ After installing the dependencies, we need to add the `QueryClientProvider` to t
 
 ```tsx
 import { forwardRef } from 'react'
-import { LinkProps, SaasProvider } from '@saas-ui/react'
+import { LinkProps, SaasProvider, defaultSystem } from '@saas-ui/react'
 import { RouterProvider, createRouter, Link } from '@tanstack/react-router'
 import { QueryClient, QueryClientProvider } from '@tanstack/react-query'
 
@@ -276,7 +282,7 @@ const LinkComponent = forwardRef<HTMLAnchorElement, Pick<LinkProps, 'href'>>(
 export const Provider = () => {
   return (
     <QueryClientProvider client={queryClient}>
-      <SaasProvider linkComponent={LinkComponent}>
+      <SaasProvider linkComponent={LinkComponent} value={defaultSystem}>
         <RouterProvider router={router} />
       </SaasProvider>
     </QueryClientProvider>
@@ -395,8 +401,8 @@ The benefit of this is that's it's a native feature and doesn't need any bundler
 Create a new file called `sidebar.tsx` in the `src/components` folder.
 
 ```tsx
-import { NavGroup, NavItem, Sidebar, SidebarSection } from '@saas-ui/react'
-import { getRouteApi } from '@tanstack/react-router'
+import { Sidebar } from '@saas-ui/react'
+import { getRouteApi, Link } from '@tanstack/react-router'
 
 const route = getRouteApi('/_app/$workspace/')
 
@@ -404,12 +410,23 @@ export const AppSidebar = () => {
   const params = route.useParams()
 
   return (
-    <Sidebar>
-      <SidebarSection>
-        <NavGroup>
-          <NavItem href={`/${params.workspace}`}>Home</NavItem>
-        </NavGroup>
-      </SidebarSection>
+    <Sidebar.Root>
+      <Sidebar.Body>
+        <Sidebar.Group>
+          <Sidebar.NavItem>
+            <Sidebar.NavButton asChild>
+              <Link
+                to="/$workspace"
+                params={{
+                  workspace: params.workspace,
+                }}
+              >
+                Home
+              </Link>
+            </Sidebar.NavButton>
+          </Sidebar.NavItem>
+        </Sidebar.Group>
+      </Sidebar.Body>
     </Sidebar>
   )
 }
@@ -422,15 +439,17 @@ The `getRouteApi` util is used to get the route API for the workspace route. Thi
 Create a new file called `sidebar-layout.tsx` in the `src/layouts` folder.
 
 ```tsx
-import { AppShell } from '@saas-ui/react'
+import { AppShell, Sidebar } from '@saas-ui/react'
 
 import { AppSidebar } from '#components/sidebar'
 
 export const SidebarLayout: React.FC<React.PropsWithChildren> = (props) => {
   return (
-    <AppShell height="$100vh" sidebar={<AppSidebar />}>
-      {props.children}
-    </AppShell>
+    <Sidebar.Provider>
+      <AppShell height="100dvh" sidebar={<AppSidebar />}>
+        {props.children}
+      </AppShell>
+    </Sidebar.Provider>
   )
 }
 ```
@@ -469,7 +488,7 @@ Let's clean up the root layout that we created initially. Edit `src/routes/__roo
 ```tsx
 import { QueryClient } from '@tanstack/react-query'
 import { createRootRouteWithContext, Outlet } from '@tanstack/react-router'
-import { TanStackRouterDevtools } from '@tanstack/router-devtools'
+import { TanStackRouterDevtools } from '@tanstack/react-router-devtools'
 
 export const Route = createRootRouteWithContext<{
   queryClient: QueryClient
@@ -501,9 +520,8 @@ export const Route = createFileRoute('/_app/$workspace/')({
 
 function Home() {
   return (
-    <Center height="$100vh">
+    <Center height="100dvh">
       <EmptyState
-        variant="centered"
         title="Nothing here yet"
         description="Add routes and pages to get started"
       />
@@ -533,7 +551,7 @@ This layout can be used for features like onboarding, that allow users to focus 
 import { AppShell } from '@saas-ui/react'
 
 export const FullscreenLayout: React.FC<React.PropsWithChildren> = (props) => {
-  return <AppShell height="$100vh">{props.children}</AppShell>
+  return <AppShell height="100dvh">{props.children}</AppShell>
 }
 ```
 
@@ -561,7 +579,7 @@ And create the page route in `src/routes/_onboarding/getting-started.tsx`.
 
 ```tsx
 import { Center, Container, Heading } from '@chakra-ui/react'
-import { Field, Form, FormLayout, SubmitButton } from '@saas-ui/react'
+import { useForm, FormLayout, SubmitButton } from '@saas-ui/forms'
 import { useMutation } from '@tanstack/react-query'
 import { createFileRoute, useNavigate } from '@tanstack/react-router'
 import { FormEvent } from 'react'
@@ -599,35 +617,34 @@ function GettingStarted() {
     },
   })
 
+  const form = useForm<OnboardingData>({
+    defaultValues: {
+      organization: '',
+      workspace: '',
+    },
+  })
+
   return (
     <Center height="$100vh">
       <Container maxW="container.sm">
         <Heading as="h2" size="lg" mb="4">
           Getting started
         </Heading>
-        <Form
-          onSubmit={(data) => submit.mutateAsync(data)}
-          defaultValues={{
-            organization: '',
-            workspace: '',
-          }}
-        >
-          {({ setValue }) => (
-            <FormLayout>
-              <Field
-                label="Organization name"
-                name="organization"
-                onChange={(e: FormEvent<HTMLInputElement>) => {
-                  const value = e.currentTarget.value
-                  setValue('organization', value)
-                  setValue('workspace', slugify(value))
-                }}
-              />
-              <Field label="Workspace" name="workspace" />
-              <SubmitButton>Continue</SubmitButton>
-            </FormLayout>
-          )}
-        </Form>
+        <form.Form onSubmit={(data) => submit.mutateAsync(data)}>
+          <FormLayout>
+            <form.Field
+              label="Organization name"
+              name="organization"
+              onChange={(e: FormEvent<HTMLInputElement>) => {
+                const value = e.currentTarget.value
+                form.setValue('organization', value)
+                form.setValue('workspace', slugify(value))
+              }}
+            />
+            <form.Field label="Workspace" name="workspace" />
+            <SubmitButton>Continue</SubmitButton>
+          </FormLayout>
+        </form.Form>
       </Container>
     </Center>
   )
@@ -700,8 +717,18 @@ Now navigate to `http://localhost:5173` and you should be redirected.
 In this article, we've set up a basic multi-tenant B2B SaaS application boilerplate using Vite, Tanstack Router, Chakra UI and Saas UI.
 We've also added React Query for data fetching and mutations, and created a simple onboarding screen.
 
-In the next article, we'll add authentication (Supabase Auth), and a proper API to fetch data from.
-I'm not sure yet what we're going to use for the API, we might use Supabase directly or use Hono, what do you think?
+In the next article, we'll add authentication (Better Auth), and a proper API running on Hono, with a Postgres database.
+
+<Info>
+  Saas UI Pro now ships with our new Tanstack Router starter kit, that includes
+  a full multi-tenant application, with authentication, tRPC, Drizzle ORM,
+  Stripe, feature flags, and a lot more.
+  <br />
+  <strong>Use code `TANSTACK` to get 20% off!</strong>
+  <br />
+  <br />
+  <Link href="/docs/tanstack-router-starter-kit">View docs</Link>
+</Info>
 
 ## Resources
 
@@ -709,4 +736,4 @@ I'm not sure yet what we're going to use for the API, we might use Supabase dire
 - [Tanstack Router](https://tanstack.com/router)
 - [React Query](https://react-query.tanstack.com/)
 - [Chakra UI](https://chakra-ui.com/)
-- [Saas UI Documentation](/docs)
+- [Saas UI v3 (beta) Documentation](https://beta.saas-ui.dev/docs)
